# swim-bliss

./: .flake8  pyproject.toml
backend/: requirements.txt  settings.py  urls.py
backend/locations/: models.py  serializers.py  tests.py  views.py
backend/locations/management/: factories.py
backend/locations/management/commands/: seed.py
backend/locations/migrations/: 0001_initial.py  0002_initial.py
backend/users/: models.py  serializers.py  views.py
backend/users/management/: factories.py
backend/users/management/commands/: seed_users.py
backend/users/migrations/: 0001_initial.py
