[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''
[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend to the SwimBlissApp"
authors = ["mhrgoldberg <mhrgoldbergs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
djangorestframework = "^3.15.2"
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
django-cors-headers = "^4.6.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
